feat: added sum API
