# main.go
@@ -37,6 +37,7 @@ func main() {
 		txnService.PUT("/transaction/:transaction_id", controllers.CreateTransaction)
 		txnService.GET("/transaction/:transaction_id", controllers.GetTransactionByID)
 		txnService.GET("/types/:type", controllers.GetAllTransactionsOfType)
+		txnService.GET("/sum/:transaction_id", controllers.GetSum)
 	}
 
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
